More UI cleanup
Changed the UI to deal with separation of logic.
Chat output now shows on the correct panel.
Chat input is now handled in the correct panel.
Button commands are now tied to the correct panel.

--- a/FileStreamClient/FileStreamClient.vcxproj
+++ b/FileStreamClient/FileStreamClient.vcxproj
@@ -83,6 +83,8 @@
     <ClCompile Include="FileStreamClient.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="impl\chat_input_panel.hpp" />
+    <ClInclude Include="impl\command_panel.hpp" />
     <ClInclude Include="impl\impl.hpp" />
     <ClInclude Include="impl\main_panel.hpp" />
     <ClInclude Include="impl\process_client.hpp" />
