--- a/FileStreamClient/FileStreamClient.vcxproj
+++ b/FileStreamClient/FileStreamClient.vcxproj
@@ -61,7 +61,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>../zlibstatic.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>../zlibstatic.lib;xml/pugixmlsd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -86,6 +86,7 @@
   <ItemGroup>
     <ClCompile Include="FileStreamClient.cpp" />
     <ClCompile Include="ui\paths.cpp" />
+    <ClCompile Include="xml\src\pugixml.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="impl\chat_input_panel.hpp" />
@@ -107,6 +108,8 @@
     <ClInclude Include="ui\ui.h" />
     <ClInclude Include="ui\ui_impl.hpp" />
     <ClInclude Include="util\util.hpp" />
+    <ClInclude Include="xml\src\pugiconfig.hpp" />
+    <ClInclude Include="xml\src\pugixml.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
